test to notify Discord on all branches

--- a/.github/workflows/discord-commits.yml
+++ b/.github/workflows/discord-commits.yml
@@ -2,7 +2,7 @@ name: Notify Discord on key GitHub events
 
 on:
   push:
-    branches: [main, fen-logic, godot-cpp-dll]
+    branches: ["**"]
   create:
     branches: ["**"]
   delete:
