--- a/keychan-chess/export_presets.cfg
+++ b/keychan-chess/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="exports/keyChanChess_.exe"
+export_path="exports/keyChanChess_.zip"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
