--- a/keychan-chess/export_presets.cfg
+++ b/keychan-chess/export_presets.cfg
@@ -1,6 +1,6 @@
 [preset.0]
 
-name="Windows"
+name="windows"
 platform="Windows Desktop"
 runnable=true
 advanced_options=false
@@ -65,10 +65,14 @@ Unregister-ScheduledTask -TaskName godot_remote_debug -Confirm:$false -ErrorActi
 ssh_remote_deploy/cleanup_script="Stop-ScheduledTask -TaskName godot_remote_debug -ErrorAction:SilentlyContinue
 Unregister-ScheduledTask -TaskName godot_remote_debug -Confirm:$false -ErrorAction:SilentlyContinue
 Remove-Item -Recurse -Force '{temp_dir}'"
+"Itch.io/Upload to Itch.io"=true
+Itch.io/Channel="windows"
+"Itch.io/Version/Use Godot project version"=false
+"Itch.io/Version/Version file"=""
 
 [preset.1]
 
-name="Linux"
+name="linux"
 platform="Linux"
 runnable=true
 advanced_options=false
@@ -108,10 +112,14 @@ unzip -o -q \"{temp_dir}/{archive_name}\" -d \"{temp_dir}\"
 ssh_remote_deploy/cleanup_script="#!/usr/bin/env bash
 kill $(pgrep -x -f \"{temp_dir}/{exe_name} {cmd_args}\")
 rm -rf \"{temp_dir}\""
+"Itch.io/Upload to Itch.io"=true
+Itch.io/Channel="linux"
+"Itch.io/Version/Use Godot project version"=false
+"Itch.io/Version/Version file"=""
 
 [preset.2]
 
-name="macOS"
+name="macos"
 platform="macOS"
 runnable=true
 advanced_options=false
@@ -363,3 +371,7 @@ open \"{temp_dir}/{exe_name}.app\" --args {cmd_args}"
 ssh_remote_deploy/cleanup_script="#!/usr/bin/env bash
 kill $(pgrep -x -f \"{temp_dir}/{exe_name}.app/Contents/MacOS/{exe_name} {cmd_args}\")
 rm -rf \"{temp_dir}\""
+"Itch.io/Upload to Itch.io"=true
+Itch.io/Channel="macos"
+"Itch.io/Version/Use Godot project version"=false
+"Itch.io/Version/Version file"=""
