--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: "Build and Release"
 on:
   push:
     paths:
-      - 'VERSION' # Triggers ONLY when this file is modified
+      - 'C.H.E.S.S/VERSION' # Updated path
 
 env:
   GODOT_VERSION: "4.5"
@@ -25,17 +25,19 @@ jobs:
 
       - name: Read Version
         id: get_version
-        run: echo "VERSION=$(cat VERSION)" >> $GITHUB_OUTPUT # Reads the file content [5, 6]
+        # Updated to read from the subfolder
+        run: echo "VERSION=$(cat C.H.E.S.S/VERSION)" >> $GITHUB_OUTPUT 
 
       - name: Godot Export
         uses: firebelley/godot-export@v5.2.1
         with:
           godot_executable_download_url: "https://github.com/godotengine/godot/releases/download/${{ env.GODOT_VERSION }}-stable/Godot_v${{ env.GODOT_VERSION }}-stable_linux.x86_64.zip"
           godot_export_templates_download_url: "https://github.com/godotengine/godot/releases/download/${{ env.GODOT_VERSION }}-stable/Godot_v${{ env.GODOT_VERSION }}-stable_export_templates.tpz"
-          relative_project_path: "./"
-          archive_output: true # Automatically zips the build
+          # 1. Point to the subfolder
+          relative_project_path: "./C.H.E.S.S" 
+          archive_output: true
           export_preset: ${{ matrix.platform }}
-          use_preset_export_path: true # Uses the paths you set in Godot (res://exports)
+          use_preset_export_path: true 
 
       - name: Publish to Itch.io
         uses: yeslayla/butler-publish-itchio-action@master
@@ -44,14 +46,17 @@ jobs:
           CHANNEL: ${{ matrix.platform }}
           ITCH_GAME: ${{ env.ITCH_GAME }}
           ITCH_USER: ${{ env.ITCH_USER }}
-          PACKAGE: "exports/${{ matrix.platform }}" # Pushes the contents of your export folder [4]
-          VERSION: ${{ steps.get_version.outputs.VERSION }} # Passes the version to Itch [4]
+          # 2. Updated path: firebelley/godot-export creates exports 
+          # RELATIVE to the project path
+          PACKAGE: "C.H.E.S.S/exports/${{ matrix.platform }}.zip" 
+          VERSION: ${{ steps.get_version.outputs.VERSION }}
 
       - name: GitHub Release
         uses: softprops/action-gh-release@v2
-        if: matrix.platform == 'windows' # Creates the release once using the Windows runner
+        if: matrix.platform == 'windows' 
         with:
           tag_name: v${{ steps.get_version.outputs.VERSION }}
           name: Release v${{ steps.get_version.outputs.VERSION }}
-          generate_release_notes: true # Auto-generates changelog from commit history 
-          files: exports/**/*.zip
+          generate_release_notes: true 
+          # 3. Updated glob to find the zips in the subfolder
+          files: C.H.E.S.S/exports/*.zip
