--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,6 @@ jobs:
 
       - name: Read Version
         id: get_version
-        # Updated to read from the subfolder
         run: echo "VERSION=$(cat C.H.E.S.S/VERSION)" >> $GITHUB_OUTPUT 
 
       - name: Godot Export
@@ -33,12 +32,12 @@ jobs:
         with:
           godot_executable_download_url: "https://github.com/godotengine/godot/releases/download/${{ env.GODOT_VERSION }}-stable/Godot_v${{ env.GODOT_VERSION }}-stable_linux.x86_64.zip"
           godot_export_templates_download_url: "https://github.com/godotengine/godot/releases/download/${{ env.GODOT_VERSION }}-stable/Godot_v${{ env.GODOT_VERSION }}-stable_export_templates.tpz"
-          # 1. Point to the subfolder
           relative_project_path: "./C.H.E.S.S" 
           archive_output: true
           export_preset: ${{ matrix.platform }}
           use_preset_export_path: true 
           additional_args: "--headless"
+        timeout-minutes: 25
 
       - name: Publish to Itch.io
         uses: yeslayla/butler-publish-itchio-action@master
@@ -47,7 +46,6 @@ jobs:
           CHANNEL: ${{ matrix.platform }}
           ITCH_GAME: ${{ env.ITCH_GAME }}
           ITCH_USER: ${{ env.ITCH_USER }}
-          # 2. Updated path: firebelley/godot-export creates exports 
           # RELATIVE to the project path
           PACKAGE: "C.H.E.S.S/exports/${{ matrix.platform }}.zip" 
           VERSION: ${{ steps.get_version.outputs.VERSION }}
@@ -58,6 +56,5 @@ jobs:
         with:
           tag_name: v${{ steps.get_version.outputs.VERSION }}
           name: Release v${{ steps.get_version.outputs.VERSION }}
-          generate_release_notes: true 
-          # 3. Updated glob to find the zips in the subfolder
+          generate_release_notes: true
           files: C.H.E.S.S/exports/*.zip
