--- a/C.H.E.S.S/export_presets.cfg
+++ b/C.H.E.S.S/export_presets.cfg
@@ -65,7 +65,7 @@ Unregister-ScheduledTask -TaskName godot_remote_debug -Confirm:$false -ErrorActi
 ssh_remote_deploy/cleanup_script="Stop-ScheduledTask -TaskName godot_remote_debug -ErrorAction:SilentlyContinue
 Unregister-ScheduledTask -TaskName godot_remote_debug -Confirm:$false -ErrorAction:SilentlyContinue
 Remove-Item -Recurse -Force '{temp_dir}'"
-"Itch.io/Upload to Itch.io"=true
+"Itch.io/Upload to Itch.io"=false
 Itch.io/Channel="windows"
 "Itch.io/Version/Use Godot project version"=false
 "Itch.io/Version/Version file"=""
@@ -112,7 +112,7 @@ unzip -o -q \"{temp_dir}/{archive_name}\" -d \"{temp_dir}\"
 ssh_remote_deploy/cleanup_script="#!/usr/bin/env bash
 kill $(pgrep -x -f \"{temp_dir}/{exe_name} {cmd_args}\")
 rm -rf \"{temp_dir}\""
-"Itch.io/Upload to Itch.io"=true
+"Itch.io/Upload to Itch.io"=false
 Itch.io/Channel="linux"
 "Itch.io/Version/Use Godot project version"=false
 "Itch.io/Version/Version file"=""
@@ -371,7 +371,7 @@ open \"{temp_dir}/{exe_name}.app\" --args {cmd_args}"
 ssh_remote_deploy/cleanup_script="#!/usr/bin/env bash
 kill $(pgrep -x -f \"{temp_dir}/{exe_name}.app/Contents/MacOS/{exe_name} {cmd_args}\")
 rm -rf \"{temp_dir}\""
-"Itch.io/Upload to Itch.io"=true
+"Itch.io/Upload to Itch.io"=false
 Itch.io/Channel="macos"
 "Itch.io/Version/Use Godot project version"=false
 "Itch.io/Version/Version file"=""
