--- a/C.H.E.S.S/export_presets.cfg
+++ b/C.H.E.S.S/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="exports/keyChanChess_.zip"
+export_path="exports/C.H.E.S.S. - Competitive Hybrid Engine Strategy Simulator (Win).zip"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -81,7 +81,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="exports/keyChanChess_linux.zip"
+export_path="exports/C.H.E.S.S. - Competitive Hybrid Engine Strategy Simulator (Linux).zip"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -128,7 +128,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="exports/keyChanChess_macOS.zip"
+export_path="exports/C.H.E.S.S. - Competitive Hybrid Engine Strategy Simulator (macOS).zip"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
