--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          # fetch-depth: 0
+          sparse-checkout: .
 
       # ---------------------------------------------------------
       # STEP 0: Smart Changelog Parser
