--- a/C.H.E.S.S/export_presets.cfg
+++ b/C.H.E.S.S/export_presets.cfg
@@ -3,7 +3,7 @@
 name="windows"
 platform="Windows Desktop"
 runnable=true
-advanced_options=true
+advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
