--- a/C.H.E.S.S/export_presets.cfg
+++ b/C.H.E.S.S/export_presets.cfg
@@ -3,7 +3,7 @@
 name="windows"
 platform="Windows Desktop"
 runnable=true
-advanced_options=false
+advanced_options=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
@@ -75,7 +75,7 @@ Itch.io/Channel="windows"
 name="linux"
 platform="Linux"
 runnable=true
-advanced_options=false
+advanced_options=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
@@ -122,7 +122,7 @@ Itch.io/Channel="linux"
 name="macos"
 platform="macOS"
 runnable=true
-advanced_options=false
+advanced_options=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
